Se solucionan los ultimos code smells